[gd_scene load_steps=12 format=3 uid="uid://cdlq1lo6y1216"]

[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_qhiy1"]
[ext_resource type="Texture2D" uid="uid://ju0731npe1pe" path="res://Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_utw8p"]
[ext_resource type="Texture2D" uid="uid://bliybx3qpf4vp" path="res://Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_ires5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h6hcc"]
texture = ExtResource("1_utw8p")
texture_margin_left = 64.0
texture_margin_top = 8.0
texture_margin_right = 64.0
texture_margin_bottom = 24.0
axis_stretch_horizontal = 2

[sub_resource type="LabelSettings" id="LabelSettings_wg57i"]
font_size = 46
font_color = Color(0.482353, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oykdj"]
texture = ExtResource("2_ires5")
texture_margin_left = 32.0
texture_margin_top = 64.0
texture_margin_right = 32.0
texture_margin_bottom = 56.0
axis_stretch_vertical = 2

[sub_resource type="SystemFont" id="SystemFont_rwqhc"]
font_weight = 425
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_upa08"]
font = SubResource("SystemFont_rwqhc")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_wwhrc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.576471)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(295.5, 37)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(243, 293)]
}

[sub_resource type="Animation" id="Animation_u75lu"]
resource_name = "background"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.203063, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.733333)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(295.5, -119), Vector2(295.5, 37)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(243, 666), Vector2(243, 293)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvaua"]
_data = {
"RESET": SubResource("Animation_wwhrc"),
"background": SubResource("Animation_u75lu")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_qhiy1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.576471)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.5
offset_top = 37.0
offset_right = 280.5
offset_bottom = 139.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_h6hcc")

[node name="Label" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.5
offset_top = 11.0
offset_right = 131.5
offset_bottom = 75.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_wg57i")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -333.0
offset_top = -355.0
offset_right = 311.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_oykdj")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived:"
label_settings = SubResource("LabelSettings_upa08")

[node name="LabelTimeScore" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10:00"
label_settings = SubResource("LabelSettings_upa08")

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated:"
label_settings = SubResource("LabelSettings_upa08")

[node name="LabelMonstersScore" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "55"
label_settings = SubResource("LabelSettings_upa08")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mvaua")
}
autoplay = "background"
